[gd_scene load_steps=17 format=3 uid="uid://d12ckrvst1osp"]

[ext_resource type="Script" uid="uid://do7rqw7y5akti" path="res://scripts/objects/npcs/baseEnemy/enemy.gd" id="1_u733l"]
[ext_resource type="Material" uid="uid://cxguwr2myxntx" path="res://graphics/materials/models/bots/thruster.tres" id="2_uec6s"]
[ext_resource type="Script" uid="uid://bqpwfw5xvfp2g" path="res://scripts/objects/player/underbellyColliders.gd" id="5_sbhyg"]
[ext_resource type="ArrayMesh" uid="uid://bmh1lb7lajb4y" path="res://graphics/models/extracted/bot.res" id="6_sbhyg"]
[ext_resource type="Script" uid="uid://caotgm5hf1ikf" path="res://scripts/objects/player/tread.gd" id="6_uec6s"]
[ext_resource type="Script" uid="uid://dslbjn7emuthd" path="res://scripts/objects/player/contact_point.gd" id="7_02sge"]
[ext_resource type="PackedScene" uid="uid://dqn5vwvgp6ddp" path="res://scenes/prefabs/utilities/combat_handler.tscn" id="7_nefpp"]
[ext_resource type="Material" uid="uid://hjfve5f811g3" path="res://graphics/materials/models/bots/tread.tres" id="7_uec6s"]
[ext_resource type="Script" uid="uid://c25f0pj3y257c" path="res://scripts/objects/npcs/baseEnemy/combat_handler.gd" id="8_uaa5m"]
[ext_resource type="Script" uid="uid://bxrmoul0q2cgc" path="res://scripts/objects/npcs/baseEnemy/motion_handler.gd" id="9_fyoyp"]
[ext_resource type="Script" uid="uid://duwahhtdrj35c" path="res://scripts/objects/npcs/baseEnemy/ai_handler.gd" id="9_m42r2"]
[ext_resource type="Script" uid="uid://hspopsylnyxu" path="res://scripts/GUI/inventoryEnemy.gd" id="11_ke8ol"]
[ext_resource type="Texture2D" uid="uid://oxhe4uwmstjd" path="res://graphics/images/HUD/enemyPing.png" id="12_fc5s6"]
[ext_resource type="Script" uid="uid://ddmbxvio7xxda" path="res://scripts/GUI/enemyPing.gd" id="13_sbhyg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hnom0"]
radius = 0.611008

[sub_resource type="SphereShape3D" id="SphereShape3D_fc5s6"]

[node name="Enemy" type="Node3D" groups=["Combatant"]]
script = ExtResource("1_u733l")
sleepTimerLength = null
meshMaterialOverride0 = ExtResource("2_uec6s")
meshMaterialOverride1 = ExtResource("7_uec6s")
AudioSourceType = null

[node name="Body" type="RigidBody3D" parent="." groups=["Combatant", "Combatant Body", "Damager", "Driveable"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000182867, 0.00276172, 3.8147e-06)
disable_mode = 2
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 100.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.09, 0)
contact_monitor = true
max_contacts_reported = 10
angular_damp_mode = 1

[node name="BotBody" type="MeshInstance3D" parent="Body" groups=["Combatant"]]
unique_name_in_owner = true
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0, -0.263986, 0)
mesh = ExtResource("6_sbhyg")
surface_material_override/1 = ExtResource("7_uec6s")

[node name="UnderbellyRaycasts" type="Node3D" parent="Body/BotBody" node_paths=PackedStringArray("underbellyCollider", "rightTread", "leftTread")]
unique_name_in_owner = true
transform = Transform3D(-8.47061e-08, 0, 1.93785, 0, 1.93785, 0, -1.93785, 0, -8.47061e-08, 0, 0.701972, 0)
script = ExtResource("5_sbhyg")
underbellyCollider = NodePath("FloorCheck")
rightTread = NodePath("TreadR")
leftTread = NodePath("TreadL")

[node name="TreadL" type="Node3D" parent="Body/BotBody/UnderbellyRaycasts" node_paths=PackedStringArray("contactPointFront", "contactPointBack")]
transform = Transform3D(0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0.7, -0.4, 0)
script = ExtResource("6_uec6s")
contactPointFront = NodePath("RaycastL1")
contactPointBack = NodePath("RaycastL2")

[node name="RaycastL2" type="RayCast3D" parent="Body/BotBody/UnderbellyRaycasts/TreadL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00999999, -0.4)
target_position = Vector3(0, -0.35, 0)
hit_from_inside = true
collide_with_areas = true
script = ExtResource("7_02sge")

[node name="RaycastL1" type="RayCast3D" parent="Body/BotBody/UnderbellyRaycasts/TreadL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00999999, 0.4)
target_position = Vector3(0, -0.35, 0)
hit_from_inside = true
collide_with_areas = true
script = ExtResource("7_02sge")

[node name="TreadR" type="Node3D" parent="Body/BotBody/UnderbellyRaycasts" node_paths=PackedStringArray("contactPointFront", "contactPointBack")]
transform = Transform3D(0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, -0.7, -0.4, 0)
script = ExtResource("6_uec6s")
contactPointFront = NodePath("RaycastR1")
contactPointBack = NodePath("RaycastR2")

[node name="RaycastR2" type="RayCast3D" parent="Body/BotBody/UnderbellyRaycasts/TreadR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00999999, -0.4)
target_position = Vector3(0, -0.35, 0)
hit_from_inside = true
collide_with_areas = true
script = ExtResource("7_02sge")

[node name="RaycastR1" type="RayCast3D" parent="Body/BotBody/UnderbellyRaycasts/TreadR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00999999, 0.4)
target_position = Vector3(0, -0.35, 0)
hit_from_inside = true
collide_with_areas = true
script = ExtResource("7_02sge")

[node name="FloorCheck" type="RayCast3D" parent="Body/BotBody/UnderbellyRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0, -0.35, 0)
script = ExtResource("7_02sge")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body" groups=["Combatant"]]
shape = SubResource("SphereShape3D_hnom0")

[node name="RadiusCheck" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000182867, -0.00276172, -3.8147e-06)
collision_layer = 4
collision_mask = 4

[node name="Shape" type="CollisionShape3D" parent="RadiusCheck"]
transform = Transform3D(1.00317, 0, 0, 0, 1.00317, 0, 0, 0, 1.00317, 0, 0, 0)
shape = SubResource("SphereShape3D_fc5s6")

[node name="_AudioStreamPlayers" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Collision" type="AudioStreamPlayer3D" parent="_AudioStreamPlayers"]

[node name="Movement" type="AudioStreamPlayer3D" parent="_AudioStreamPlayers"]

[node name="Ambient" type="AudioStreamPlayer3D" parent="_AudioStreamPlayers"]

[node name="Weapon" type="AudioStreamPlayer3D" parent="_AudioStreamPlayers"]

[node name="CombatHandler" parent="." instance=ExtResource("7_nefpp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.388926, 0)
script = ExtResource("8_uaa5m")
scrap_worth = 2
maxInvincibleTimer = 0.15

[node name="MotionHandler" type="Node3D" parent="."]
script = ExtResource("9_fyoyp")

[node name="AIHandler" type="Node3D" parent="."]
script = ExtResource("9_m42r2")

[node name="Inventory" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_ke8ol")
metadata/_custom_type_script = "uid://lqq6dh38f1k6"

[node name="Ping" type="Control" parent="." node_paths=PackedStringArray("combatHandler", "thisBotBody")]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 16.0
offset_bottom = 16.0
script = ExtResource("13_sbhyg")
combatHandler = NodePath("../CombatHandler")
thisBotBody = NodePath("../Body")

[node name="Label" type="Label" parent="Ping"]
layout_mode = 0
offset_left = -74.0
offset_top = -4.0
offset_right = 90.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(1, 0.431373, 0.286275, 1)
theme_override_colors/font_outline_color = Color(0.811765, 0.129412, 0.129412, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 0
text = "000"
horizontal_alignment = 1

[node name="Texture" type="TextureRect" parent="Ping"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("12_fc5s6")

[connection signal="body_entered" from="Body" to="MotionHandler" method="_on_body_entered"]
[connection signal="area_entered" from="RadiusCheck" to="MotionHandler" method="_on_radius_check_area_entered"]
